--- a/WatchAlarm.xcodeproj/xcshareddata/xcschemes/WatchAlarm2 Watch App.xcscheme
+++ b/WatchAlarm.xcodeproj/xcshareddata/xcschemes/WatchAlarm2 Watch App.xcscheme
@@ -43,6 +43,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "53AAFBE52DDC209300EECE31"
+               BuildableName = "WatchAlarmTests.xctest"
+               BlueprintName = "WatchAlarmTests"
+               ReferencedContainer = "container:WatchAlarm.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
